--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
               <img src="images/project-1_500.jpg" alt="My Portfolio image">
             </picture>
             <figcaption>
-              Project1 <br>
-              <a href="https://github.com/udacity/appify">https://github.com/udacity/appify</a>
+              My Portfolio <br>
+              <a href="https://github.com/sivakrajgithub/my-portfolio.git">https://github.com/sivakrajgithub/my-portfolio.git</a>
             </figcaption>
           </figure>
         </div>
@@ -56,7 +56,7 @@
             </picture>
             <figcaption>
               Project2 <br>
-              <a href="https://github.com/udacity/appify">https://github.com/udacity/appify</a>
+              <a href="https://github.com/sivakrajgithub/my-portfolio.git">https://github.com/sivakrajgithub/my-portfolio.git</a>
             </figcaption>
           </figure>
         </div>
@@ -69,7 +69,7 @@
             </picture>
             <figcaption>
               project3 <br>
-              <a href="https://github.com/udacity/appify">https://github.com/udacity/appify</a>
+              <a href="https://github.com/sivakrajgithub/my-portfolio.git">https://github.com/sivakrajgithub/my-portfolio.git</a>
             </figcaption>
           </figure>
         </div>
